[tool.poetry]
name = "rna-aa3"
version = "0.1.0"
description = "Prever o risco durante a gravidez de uma mulher."
authors = ["Leikode <vhsdl.eng19@uea.edu.br>, jo-alves01 <jcsa.eng17@uea.edu.br>, carlosMachado1 <cgdsm.eng18@uea.edu.br>, gabi195 <grm.eng19@uea.edu.br>"]
readme = "README.md"
packages = [{include = "rna_aa3"}]

[tool.poetry.dependencies]
python = ">=3.8.10, <3.9"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
ipykernel = "^6.21.3"
keras = "^2.11.0"
tensorflow = "^2.11.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
